# Macbeth

./: .coderabbit.yaml  .codespellrc  .dockerignore  .env  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .releaserc  .releaserc.yaml  .typos.toml  CNAME  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.btc_server  Dockerfile.testnet  Makefile  README.md  SECURITY.md  bitcoin.conf  book.toml  botanix-local.sh  chain.template.toml  clippy.toml  compose.yml  cosign.pub  deny.toml  docker-bake.hcl  federation.template.toml  gendocs.sh  generate-compose.sh  local_setup.sh  package.json  pnpm-lock.yaml  rust-toolchain.toml  rustfmt.toml  setup-local-env.sh  (+7 more)
.cargo/: config.toml
.config/: nextest.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml
adrs/: gitflow.md  network-deployment.md  release-strategy.md  release.md
binaries/: bitcoin-cli  bitcoin-tx  bitcoin-util
book/: SUMMARY.md  intro.md
cometbft/: Makefile  cometbft-local.Dockerfile  docker-compose-cometbft-local.yml  init.sh
cometbft-local/: init.sh
contracts/: README.md  minting_bytecode.hex
cov-reports/: .gitignore
crates/botanix-activation-manager/: Cargo.toml
crates/botanix-activation-manager/src/: builder.rs  lib.rs  manager.rs  vote_tracker.rs
crates/botanix-activation-manager/src/test_utils/: asserts.rs  db.rs  fixtures.rs  mod.rs
crates/botanix-activation-manager/tests/: accept_lagging_validator.rs  force_upgrade_checked.rs  reject_ignored_upgrade.rs  reject_mismatched_vote.rs  reject_outdated_or_unsupported_version.rs  vote_expiration.rs  vote_majority_nay_compliant_and_reject.rs  vote_nay_and_accept.rs  vote_nay_and_reject.rs  wait_for_compliance.rs
crates/botanix-authority-edh/: Cargo.toml
crates/botanix-authority-edh/src/: extra_data_header.rs  header_ext.rs  lib.rs
crates/botanix-authority-metrics/: Cargo.toml
crates/botanix-authority-metrics/src/: lib.rs
crates/botanix-authority-peg/: Cargo.toml
crates/botanix-authority-peg/src/: block_with_peg.rs  mint_validation.rs  peg_contract.rs
crates/botanix-bitcoin-checkpoint/: Cargo.toml
crates/botanix-bitcoin-checkpoint/src/: chain.rs  error.rs  syncer.rs
crates/botanix-chainspec/: Cargo.toml
crates/botanix-chainspec/src/: constants.rs  lib.rs  parser.rs
crates/botanix-chainspec/templates/: botanix_mainnet_template.json
crates/botanix-cli/: Cargo.toml
crates/botanix-cli-args/: Cargo.toml
crates/botanix-cli-args/src/: bitcoind.rs  chain.rs  frost_args.rs  lib.rs  poa_node.rs  state_sync.rs
crates/botanix-cli-parsers/: Cargo.toml
crates/botanix-cli-parsers/src/: errors.rs  lib.rs  parsers.rs
crates/botanix-cli/src/: main.rs
crates/botanix-comet-bft-rpc/: Cargo.toml
crates/botanix-comet-bft-rpc/src/: lib.rs  light_client.rs  non_deterministic_data.rs  utils.rs
crates/botanix-configs/: Cargo.toml
crates/botanix-configs/src/: federation.rs
crates/botanix-data-parser/: Cargo.toml
crates/botanix-data-parser/src/: compression_strategies.rs  error.rs  prost_parser.rs
crates/botanix-foundation-layer/: Cargo.toml
crates/botanix-foundation-layer/src/: db_impl.rs  lib.rs
crates/botanix-hardforks/: Cargo.toml
crates/botanix-hardforks/src/: lib.rs
crates/botanix-lib/: Cargo.toml
crates/botanix-lib/src/: extra_data_header.rs  header_ext.rs  lib.rs  mint_validation.rs  peg_contract.rs  utils.rs
crates/botanix-rpc-client/: Cargo.toml
crates/botanix-rpc-client/src/: botanix.rs  error.rs  lib.rs
crates/botanix-rpc-config/: Cargo.toml
crates/botanix-rpc-config/src/: botanix_config.rs  lib.rs
crates/botanix-storage/: Cargo.toml
crates/botanix-storage-migrate/: Cargo.toml
crates/botanix-storage-migrate/src/: lib.rs  migrate.rs  report.rs  table_transporter.rs
crates/botanix-storage-migrate/src/test_utils/: fixtures.rs  mod.rs
crates/botanix-storage-migrate/tests/: migrate.rs  need.rs
crates/botanix-storage/src/: lib.rs  tables.rs
crates/botanix-storage/src/models/: activation_manager.rs  mod.rs  snapshot.rs  staged_header.rs  wallet_sweep.rs  wallet_sync.rs
crates/botanix-storage/src/provider/: mod.rs
crates/botanix-storage/src/provider/database/: factory.rs  foundation.rs  metrics.rs  mod.rs  provider.rs  runtime_transitions.rs  snapshot.rs  staged_header.rs  wallet_state_sync.rs  wallet_sweep.rs
crates/botanix-storage/src/provider/traits/: activation_manager.rs  factory.rs  foundation.rs  mod.rs  runtime_transitions.rs  snapshot.rs  staged_header.rs  wallet_state_sync.rs  wallet_sweep.rs
crates/botanix-storage/src/test_utils/: mock.rs  mod.rs  noop.rs  provider.rs
crates/botanix-utils/: Cargo.toml
crates/botanix-utils/src/: panic_hook.rs
crates/botanix-wallet-sweep/: Cargo.toml
crates/botanix-wallet-sweep/src/: dump.rs  encoding.rs  init.rs  lib.rs  psbt.rs  request.rs
crates/btc-wallet/: Cargo.toml
crates/btc-wallet/src/: address.rs  bitcoind.rs  block_source.rs  key.rs  lib.rs  psbt.rs  transaction.rs  util.rs
crates/btc-wallet/src/test_utils/: mod.rs
crates/chain-state/: Cargo.toml
crates/chain-state/src/: in_memory.rs  lib.rs  memory_overlay.rs  notifications.rs  test_utils.rs
crates/chainspec/: Cargo.toml
crates/chainspec/res/genesis/: botanix_mainnet.json  botanix_testnet.json  dev.json  goerli.json  holesky.json  mainnet.json  optimism.json  sepolia.json
crates/chainspec/src/: constants.rs  lib.rs  spec.rs
crates/chainspec/templates/: botanix_mainnet_template.json  botanix_testnet_template.json
crates/config/: Cargo.toml
crates/e2e-test-utils/: Cargo.toml
crates/e2e-test-utils/src/: network.rs  node.rs
crates/etl/: Cargo.toml
crates/etl/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/metrics-derive/: Cargo.toml
crates/metrics/metrics-derive/src/: expand.rs  lib.rs
crates/metrics/src/: lib.rs
crates/primitives-traits/: Cargo.toml
crates/primitives-traits/src/: account.rs  alloy_compat.rs  lib.rs  withdrawal.rs
crates/primitives-traits/src/constants/: mod.rs
crates/primitives-traits/src/header/: mod.rs  sealed.rs
docs/: README.md  (+9 more)
(+1114 files in other folders)
