[package]
name = "botanix-authority-edh"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true }
botanix-authority-peg = { workspace = true }
botanix-btc-wallet = { workspace = true }
rand = { workspace = true }
reth-primitives-traits = { workspace = true }
revm-primitives = { workspace = true }
secp256k1 = { workspace = true, features = ["global-context", "rand-std", "recovery"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
