[package]
name = "botanix-authority-metrics"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
reth-metrics = { workspace = true, features = ["common"] }
metrics = { workspace = true }
metrics-util = { workspace = true }
tokio = { workspace = true, features = ["full"] }
