[package]
name = "botanix-authority-peg"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
bitcoin = { workspace = true, optional = true }
bitcoincore-rpc = { workspace = true, optional = true }
botanix-btc-wallet = { workspace = true, optional = true }
btc-server = { path = "../../bin/btc-server", optional = true }
ethabi = { version = "18.0.0", optional = true }
ethers = { version = "2.0.9", optional = true }
frost-secp256k1-tr = { workspace = true, optional = true }
lazy_static = { version = "1.4.0", optional = true }
rand = { workspace = true }
reth-primitives = { workspace = true }
reth-primitives-traits = { workspace = true }
revm-primitives = { workspace = true }
secp256k1 = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
assert_matches = { workspace = true }

[features]
default = ["secp256k1"]
secp256k1 = [
    "dep:secp256k1",
    "dep:bitcoincore-rpc",
    "dep:ethers",
    "dep:ethabi",
    "dep:frost-secp256k1-tr",
    "dep:lazy_static",
    "dep:botanix-btc-wallet",
    "dep:btc-server",
    "dep:bitcoin",
    "dep:tracing",
]
