[package]
name = "botanix-bitcoin-checkpoint"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
arc-swap = "1.7.1"
async-trait = { workspace = true }
bitcoin = { workspace = true }
bitcoincore-zmq = { workspace = true }
botanix-btc-wallet = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
