[package]
name = "botanix-chainspec"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
# ethereum
alloy-chains = { workspace = true, features = ["serde", "rlp"] }
alloy-eips = { workspace = true, features = ["serde"] }
alloy-genesis = { workspace = true }
alloy-primitives = { workspace = true, features = ["rand", "rlp"] }

# askama
askama = "0.12.1"
once_cell = { workspace = true }
reth-chainspec = { workspace = true }
reth-ethereum-forks = { workspace = true }
serde_json = { workspace = true }
