[package]
name = "botanix-cli-parsers"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
askama = "0.12.1"
bitcoin = { workspace = true }
botanix-authority-edh = { workspace = true }
botanix-configs = { workspace = true }
eyre = { workspace = true }
reth-chainspec = { workspace = true }
reth-cli-util = { workspace = true }
reth-primitives = { workspace = true }
secp256k1 = { workspace = true, features = ["global-context", "rand-std", "recovery"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shellexpand = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tonic = "0.12.3"
url = { workspace = true }
