[package]
name = "botanix-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "btx"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
assert_matches = "1.5"

# CLI
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
reth-primitives = { workspace = true, features = ["secp256k1"] }
