[package]
name = "botanix-configs"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
askama = { workspace = true }
bitcoin = { workspace = true }
displaydoc = { version = "0.2" }
eyre = { workspace = true }
reth-chainspec = { workspace = true }
reth-cli-util = { workspace = true }
reth-primitives = { workspace = true }
secp256k1 = { workspace = true, features = ["global-context", "rand-std", "recovery"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shellexpand = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tonic = "0.12.3"
url = { workspace = true }
