[package]
name = "botanix-data-parser"
description = "A parser and compressor for various data structures"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
async-compression = { version = "0.4.18", features = ["all"] }
async-trait = { workspace = true }
bincode = "1.3"
bitcoin = { workspace = true }
btc-server-client = { path = "../../bin/btc-server/client" }
bytes = "1.6.0"
displaydoc = "0.2"
lazy_static = "1.5"
paste = "1.0"
postcard = { version = "1.0", features = ["alloc"] }
prost = "0.13.3"
rand = "0.8.5"
serde = { workspace = true }
serde_json = { workspace = true }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
default = []
