[package]
name = "botanix-storage"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = "Botanix storage implementation"

[lints]
workspace = true

[dependencies]
arbitrary = { workspace = true, features = ["derive"], optional = true }
bytes = { workspace = true }
secp256k1 = { workspace = true, features = ["global-context", "rand-std", "recovery"] }
auto_impl = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }
modular-bitfield = { workspace = true }
uuid = { version = "1.8.0", features = ["v4"] }

# reth
reth-db = { workspace = true, features = ["mdbx"] }
reth-db-api = { workspace = true }
reth-codecs = { workspace = true }
reth-primitives = { workspace = true, features = ["reth-codec"] }
reth-prune-types = { workspace = true }
reth-storage-errors = { workspace = true }

serde = { workspace = true, default-features = false }
sha2 = { workspace = true }
eyre = { workspace = true }

[dev-dependencies]
botanix-storage = { path = ".", features = ["test-utils"]}
tempfile = { workspace = true }
reth-primitives = { workspace = true, features = ["arbitrary"] }
proptest = { workspace = true }
proptest-arbitrary-interop = { workspace = true }
test-fuzz = { workspace = true }
arbitrary = { workspace = true, features = ["derive"] }

[features]
arbitrary = ["dep:arbitrary"]
test-utils = ["reth-db/test-utils"]
